--- a/1211-taiwan-only.Rmd
+++ b/1211-taiwan-only.Rmd
@@ -58,6 +58,10 @@ bcftools view -S meta/taiwan-thai-samples.txt outputs/renamed-01.vcf.gz | bcftoo
 #Using random seed: 1739855581
 bcftools view -S meta/m35-samples.txt outputs/renamed-01.vcf.gz | bcftools +fill-tags -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.10' | bcftools view -i 'INFO/MAF < 0.45' |   bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand > outputs/1211/m35.vcf
 
+#Using random seed: 1740009485
+bcftools view -S meta/m35-samples.txt outputs/renamed-01.vcf.gz | bcftools +fill-tags -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.05' | bcftools view -i 'INFO/MAF < 0.45' |   bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand > outputs/1211/m35-05.vcf
+
+
 #Using random seed: 1739855881
 bcftools view -S meta/m23-samples.txt outputs/renamed-01.vcf.gz | bcftools +fill-tags -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.10' | bcftools view -i 'INFO/MAF < 0.45' |   bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand > outputs/1211/m23.vcf
 
@@ -65,8 +69,7 @@ bcftools view -S meta/m23-samples.txt outputs/renamed-01.vcf.gz | bcftools +fill
 
 ```{r}
 path_to_file <- "outputs/1211/taiwan-thai.vcf"
-#path_to_file <- "outputs/1211/taiwan-thai-20.vcf"
-
+path_to_file <- "outputs/1207/sea05/sea.vcf"
 filename <- read.pcadapt(path_to_file, type = "vcf")
 ```
 
@@ -91,7 +94,7 @@ panela<-plot(x, option = "screeplot", K = 10) + ggtitle("A") +
 panela
 ```
 ```{r}
-m<-m18
+m<-m41
 ```
 
 ```{r}
@@ -108,26 +111,95 @@ pcadata<-pcadata %>% bind_cols(m)
 ```
 
 ```{r}
+cols<-viridis(17,option = "H")
+text12<-pcadata %>% group_by(Region) %>% summarize(x=mean(V1),y=mean(V2))
 ggplot(pcadata) +
-  geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
-  geom_text_repel(data=pcadata %>% filter(Region %in% c("Taiwan")), aes(x=V1, y=V2,label=Run)) +
-  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
-  scale_fill_viridis_d(option="H") +
+  geom_jitter(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95, cex=2) +
+  geom_label_repel(data=text12, aes(x=x, y=y, label=Region, fill=Region), alpha=0.8) +
+ # geom_text_repel(data=pcadata %>% filter(Region %in% c("Taiwan")), aes(x=V1, y=V2,label=Run)) +
+  scale_shape_manual(values=c(24)) + 
+  scale_fill_manual(values=cols[6:13]) +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
   theme(legend.position = "none") +
   theme(panel.grid = element_blank()) +
   xlab(paste0("PC1 ",var[1],"%")) +
-  ylab(paste0("PC 2",var[2],"%"))
+  ylab(paste0("PC2 ",var[2],"%"))
 
+ggsave("outputs/1211/sea-pca.pdf", width=6, height=5)
+```
+
+```{r}
+path_to_file <- "outputs/1211/m35-05.vcf"
+filename <- read.pcadapt(path_to_file, type = "vcf")
+```
+
+
+_1_ choose a K   
+
+```{r}
+x <- pcadapt(input = filename, K = 10) 
+var<-round(x$singular.values^2*100,2)
+```
+
+```{r}
+#plot(x, option = "screeplot")
+panela<-plot(x, option = "screeplot", K = 10) + ggtitle("A") +
+  theme(plot.title = element_text(size=14, face="bold")) +
+  theme(panel.grid = element_blank(), panel.background = element_blank()) +
+  scale_x_continuous(breaks=seq(1,10,1), labels=seq(1,10,1)) +
+  ylab("Proption of Explained Variance\n") +
+  xlab("\nPrincipal Component") +
+  theme(axis.title=element_text(size=12))
+panela
+```
+```{r}
+m<-m35
+```
+
+```{r}
+plot(x, option = "scores", pop = factor(m$Region))
+ 
+```
+
+
+Get scree plot and PCA    
+```{r}
+pcadata<-x$scores[,1:5] %>% as_tibble()
+pcadata<-pcadata %>% bind_cols(m)
 
 ```
+
+```{r}
+cols<-viridis(17,option = "H")
+text12<-pcadata %>% group_by(Region) %>% summarize(x=mean(V1),y=mean(V2))
+ggplot(pcadata) +
+  geom_jitter(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95, cex=2) +
+  geom_label_repel(data=text12, aes(x=x, y=y, label=Region, fill=Region), alpha=0.8) +
+ # geom_text_repel(data=pcadata %>% filter(Region %in% c("Taiwan")), aes(x=V1, y=V2,label=Run)) +
+  scale_shape_manual(values=c(24)) + 
+  scale_fill_manual(values=cols[8:13]) +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme_bw() +
+  theme(legend.position = "none") +
+  theme(panel.grid = element_blank()) +
+  xlab(paste0("PC1 ",var[1],"%")) +
+  ylab(paste0("PC2 ",var[2],"%"))
+
+ggsave("outputs/1211/sea-pca-nowallacean.pdf", width=6, height=5)
+```
+
 
 ## Admix
 
 ```{r}
 m<-m18
 vcf <-read.vcfR("outputs/1211/taiwan-thai.vcf") 
+
+m<-m41
+vcf <-read.vcfR("outputs/1207/sea05/sea.vcf") 
+
+
 gl<-vcfR2genlight(vcf)
 gl$pop<-as.factor(gsub(" ","-",m$Region))
 ```
@@ -137,7 +209,7 @@ gl$pop<-as.factor(gsub(" ","-",m$Region))
 glx<-gl
 glx <- gl.compliance.check(glx) 
 
-gl3<-gl.filter.maf(glx, threshold = 0.1)
+gl3<-gl.filter.maf(glx, threshold = 0.05)
 #gl3<-gl.filter.allna(gl3)
 gl3<-glx
 ```
@@ -146,7 +218,9 @@ gl3<-glx
 ```{r}
 snp<-import.snpR.data(gl3)
 
-structure<-plot_structure(snp, facet=c("pop"),
+structure<-plot_structure(snp, facet=c("pop"), facet.order = c("Indonesia-K", "Indonesia-SU","Indonesia-SJ",
+                                                               "Philippines","Taiwan","Vietnam","Cambodia",
+                                                               "Thailand"),
                k=c(2,3,4,5))
 
 structure$plot
